# ios/SplitBackAPI/Sources/SplitBackAPI/openapi.json
@@ -4443,6 +4443,11 @@
             "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
             "title": "Balance"
           },
+          "available_balance": {
+            "type": "string",
+            "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
+            "title": "Available Balance"
+          },
           "currency": {
             "type": "string",
             "title": "Currency"
